--- a/article.html
+++ b/article.html
@@ -35,7 +35,7 @@
 &lt;/html&gt;
         </pre>
     </div>
-    <p>Replace “Your Name's Portfolio” and replace IMG.jpg with the file name of your photo.</p>
+    <p>Replace “Your Name's” with your name and replace IMG.jpg with the file name of your photo.</p>
     <p>4. On your GitHub profile, go to Your Repositories and create a new repository.</p>
     <p>5. Type (yourusername).github.io in the Repository Name field, making sure to substitute your username in.</p>
     <p>6. Hit the Create Repository button</p>
