--- a/article.html
+++ b/article.html
@@ -37,7 +37,7 @@
     </div>
     <p>Replace “Your Name's” with your name and replace IMG.jpg with the file name of your photo.</p>
     <p>4. On your GitHub profile, go to Your Repositories and create a new repository.</p>
-    <p>5. Type (yourusername).github.io in the Repository Name field, making sure to substitute your username in.</p>
+    <p>5. Type yourusername.github.io in the Repository Name field, making sure to substitute your username in.</p>
     <p>6. Hit the Create Repository button</p>
     <p>7. After creating this repository, select Upload an Existing File and select the two files your just opened in Visual Studio Code</p>
     <p>8. Hit the Commit Changes button</p>
