--- a/article.html
+++ b/article.html
@@ -39,7 +39,7 @@
     <p>4. On your GitHub profile, go to Your Repositories and create a new repository.</p>
     <p>5. Type yourusername.github.io in the Repository Name field, making sure to substitute your username in.</p>
     <p>6. Hit the Create Repository button</p>
-    <p>7. After creating this repository, select Upload an Existing File and select the two files your just opened in Visual Studio Code</p>
+    <p>7. After creating this repository, select Upload an Existing File and select the two files you just opened in Visual Studio Code</p>
     <p>8. Hit the Commit Changes button</p>
     <p>9. Wait a minute or two and in a web browser of your choice, navigate to your repository’s address i.e. yourusername.github.io</p>
     <p>10. There you should see your photo and text that reads “Your Name’s Portfolio”</p>
