--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <section id="intro">
         <h1>Intro Video:</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=AjWfY7SnMBI" frameborder="10" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/AjWfY7SnMBI?si=cpcmujVvnK2RZ4Dh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
         <div class="bio">
             <h1>About Me:</h1>
